--- a/register.html
+++ b/register.html
@@ -12,6 +12,13 @@
     <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
 </head>
 <body>
-    
+    <script>
+        firebase.auth().onAuthStateChanged(function(user)
+        {
+          if(user) {
+            window.location.href = "subscriptions.html";
+          }
+        });
+      </script>
 </body>
 </html>
