--- a/subscriptions.html
+++ b/subscriptions.html
@@ -9,5 +9,17 @@
 <body>
     <h1>welcome to the 5G network</h1>
     <p>please select your preffered speed</p>
+
+
+
+
+    <script src="js/index.js"></script>
+    <script>
+	firebase.auth().onAuthStateChanged(function(user) {
+	if(user) {
+	window.location.href = "subscriptions.html";
+	 }
+	});
+</script>
 </body>
 </html>
