--- a/Home.html
+++ b/Home.html
@@ -7,11 +7,13 @@
 <body>
 
   <div id="login_div" class="main-div">
-    <h3>Mobile fly Web login Example</h3>
+    <h3>Log into Mobile Fly</h3>
     <input type="email" placeholder="Email..." id="email_field" />
     <input type="password" placeholder="Password..." id="password_field" />
 
     <button onclick="login()">Login to Account</button>
+    <br>
+    <button><a href="Gate.html">Create new account</a></button>
   </div>
 
   <div id="user_div" class="loggedin-div">
