--- a/register.html
+++ b/register.html
@@ -1,24 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register mobile fly</title>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-database.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-storage.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.0/firebase-ui-auth.js"></script>
+  <title>Firebase Login</title>
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <script>
-        firebase.auth().onAuthStateChanged(function(user)
-        {
-          if(user) {
-            window.location.href = "subscriptions.html";
-          }
-        });
-      </script>
+
+  <div id="login_div" class="main-div">
+    <h3>Log into Mobile Fly</h3>
+    <input type="email" placeholder="Email..." id="email_field" />
+    <input type="password" placeholder="Password..." id="password_field" />
+
+    <button onclick="login()">Login to Account</button>
+    <br>
+    <button><a href="Gate.html">Create new account</a></button>
+  </div>
+
+  <div id="user_div" class="loggedin-div">
+    <h3>Welcome User</h3>
+    <p id="user_para">Welcome to Mobile Fly. You have successfully logged in!.</p>
+    <button onclick="logout()">Logout</button>
+  </div>
+
+
+
+  <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyA6XmqP76EBAG1XHZhtbJn6lDDagYH14xI",
+      authDomain: "aqueous-encoder-301807.firebaseapp.com",
+      databaseURL: "https://aqueous-encoder-301807-default-rtdb.firebaseio.com",
+      projectId: "aqueous-encoder-301807",
+      storageBucket: "aqueous-encoder-301807.appspot.com",
+      messagingSenderId: "1012545270359"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <script src="index.js"></script>
+
 </body>
 </html>
