new register title

--- a/Gate.html
+++ b/Gate.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Firebase Login</title>
+  <title>Mobile Fly Register</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
