login page update

--- a/Home.html
+++ b/Home.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-  <title>Mobile Fly Login</title>
+  <title>Mobile Fly</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <div id="login_div" class="main-div">
-    <h3>Log into Mobile Fly</h3>
+    <h3>Mobile Fly</h3>
     <input type="email" placeholder="Email..." id="email_field" />
     <input type="password" placeholder="Password..." id="password_field" />
 
@@ -20,6 +20,8 @@
     <h3>Welcome User</h3>
     <p id="user_para">Welcome to Mobile Fly. You have successfully logged in!.</p>
     <button onclick="logout()">Logout</button>
+    <br>
+    <button><a href="./pages/data_bundles.html">Home</a></button>
   </div>
 
 
