--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
 <body>
 
   <div id="login_div" class="main-div">
-    <h3>Mobile Fly</h3>
+    <h3>Mobile Fly 5G</h3>
     <input type="email" placeholder="Email..." id="email_field" />
     <input type="password" placeholder="Password..." id="password_field" />
 
