--- a/Home.html
+++ b/Home.html
@@ -21,7 +21,7 @@
     <p id="user_para">Welcome to Mobile Fly. You have successfully logged in!.</p>
     <button onclick="logout()">Logout</button>
     <br>
-    <button><a href="./pages/data_bundles.html">Home</a></button>
+    <button><a href="./pages/data_bundles.html">self service</a></button>
   </div>
 
 
