--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -37,8 +37,25 @@
     <p>New subscribers with a wifi router will be promted to pay P250</p>
     <p>You will be provided with an active simcard suitable for your router</p>
     <br>
+    <p>New users on Mobile will be promted to pay P400</p>
+    <p>You will be provided with a new simcard or depending on your options we will use your existing active number</p>
+    <br>
     <h3>How do I use my own number?</h3>
     <p>When signing up/ renewing your service please specify it within the message along with your number and the other details you may be prompted.</p>
+</div>
+<br>
+<div>
+    <h1>TERMS OF SERVICE</h1>
+    <P>Mobile fly will not be held reponsible for any data loss</P>
+    <p>Loss of property or any activity of "hacking" will not be investigated nor will Mobile Fly release any personal information about our clients/ staff without a court order by the government of Botswana </p>
+    <p>You and Mobile Fly will be responsible for your own internet connection, if Mobile Fly disconnects you sooner than the agreed time then the cause is likely that you have breached our terms of service</p>
+    <p>If any fault is found/ caused by Mobile Fly we will take ownership of any damages and you will be provided with a day of internet connectivity or you will be given 12% of your money back</p>
+    <p>Any sign out of line by an end user to get free internet connection will result in you being blacklisted by Mobile Fly for a period of 12 months</p>
+    <p>Your agreement with Mobile Fly is between you and Mobile Fly ONLY and the services we provide you (our users) are <strong>NOT</strong> for the benefit of third parties.</p>
+    <p>We understand technical difficulties may happen so if you're affected by it then we shall take responsiblity and assist you as needed</p>
+    <br>
+    <h2>Our terms of service are made to monitor, constrict & or approve transactions that occur between our clients and us</h2>
+    <p>to protect our staff and our customers from any harm or fraud</p>
 </div>
 </body>
 </html>
