--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -42,6 +42,10 @@
     <br>
     <h3>How do I use my own number?</h3>
     <p>When signing up/ renewing your service please specify it within the message along with your number and the other details you may be prompted.</p>
+    <br>
+    <h3>How do I close my Mobily Fly account?</h3>
+    <p>Simple, just send "M-F terminate" to <a href="mailto:solidbigshot@protonmail.com">us</a>. Your profile will be deleted in 3 months</p>
+    <p>You can also reactivate your account by singing in before 3 months</p>
 </div>
 <br>
 <div>
@@ -54,8 +58,8 @@
     <p>Your agreement with Mobile Fly is between you and Mobile Fly ONLY and the services we provide you (our users) are <strong>NOT</strong> for the benefit of third parties.</p>
     <p>We understand technical difficulties may happen so if you're affected by it then we shall take responsiblity and assist you as needed</p>
     <br>
-    <h2>Our terms of service are made to monitor, constrict & or approve transactions that occur between our clients and us</h2>
-    <p>to protect our staff and our customers from any harm or fraud</p>
+    <h2>Our terms of service are made under the MIT license 2021 to monitor, constrict & or approve transactions that occur between our clients and us</h2>
+    <p>to protect our staff and our customers from any harm , fraud or data loss</p>
 </div>
 </body>
 </html>
