--- a/pages/data_bundles.html
+++ b/pages/data_bundles.html
@@ -75,7 +75,7 @@
 						</li>
 						
 						<li>
-							<a href="" data-scroll="">FAQ</a>
+							<a href="./FAQ.html" data-scroll="">FAQ</a>
 						</li>
 						
 					</ul>
