--- a/pages/data_bundles.html
+++ b/pages/data_bundles.html
@@ -63,7 +63,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						
 						<li class="active">
-							<a href="living-room.html" data-scroll="">Home</a>
+							<a href="#home" data-scroll="">Home</a>
 						</li>
 						
 						<li>
