--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -17,7 +17,7 @@
     <h3>I want to subscribe/ renew my service</h3>
     <p>Please visit <a href="https://kevstar0.github.io/pages/Data_bundles.html">Mobile fly</a> and select your package, you will be charged for the chosen service via Ewallet services and connectivity will resume shortly.</p>
     <br>
-    <h3>I want the "no limimt" data plan</h3>
+    <h3>I want the "no limit" data plan</h3>
     <p>The no limit data plan is designed for users on the go, it primarily focusses on keeping you connected to the internet whenever wherever on your mobile phone. Apply <a href="mailto:solidbigshot@protonmail.com">here</a></p>
     <br>
     <h3>How many devices can i connect?</h3>
