--- a/pages/data_bundles.html
+++ b/pages/data_bundles.html
@@ -9,7 +9,7 @@
 			
         <meta name="msapplication-tap-highlight" content="no">
 		
-		<title></title>
+		<title>Data packages</title>
 		
 		<!--======================================================
 			CSS Stylesheets
