what happened last

--- a/Home.html
+++ b/Home.html
@@ -31,6 +31,12 @@
         <p>But we need some images, colour and animations...</p>
         <p>we need some javascript</p>
     </div>
+
+    <h2>02 September</h2>
+    <p>Added index.js to be used for javascript purposes (unconfigured)</p>
+    <p>Added package.json handles user auth (ready but unconfigured)</p>
+    <p>Node powered (npm) for developement</p>
+    <p>Git sync active with VS code</p>
 </body>
 
 <footer></footer>
